# recommend_a_journal

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  streamlit_app.py
.github/workflows/: update-journal-database.yml
data/: controlled_vocabularies.yaml  journal_metrics.csv  journals.yaml  source_urls.csv
data/examples/: bioinformatics_tool_features.yaml  example_manuscript_features.yaml  microbiome_cohort_features.yaml  phage_genomics_features.yaml
data/index/: journal_corpus.jsonl
data_manual/: README.md  manifest.yaml  manifest_extra_journals.yaml  manual_download_queue.yaml
data_manual/pages/: aem_art.html  aem_home.html  asm_am_art.html  asm_authors.html  asm_publishing_fees.html  bmc_bioinformatics_homepage_or_scope.html  cell_authors.html  cell_home.html  cell_host_microbe_authors.html  cell_host_microbe_home.html  environmental_microbiome_homepage_or_scope.html  (+31 more)
docs/: controlled_vocabularies.md  journal_curation_guide.md  manuscript_feature_schema.md  scoring_rubric.md
prompts/: editorial_triage.md  journal_ranker.md  llm_feature_refinement.md  manuscript_parser.md  presubmission_enquiry.md
reports/: draft_manuscript_features.yaml  example_journal_recommendation.md  extracted_manuscript_text.txt  journal_database_changed.md  manual_download_queue.md  metrics_audit.md
tests/: test_cli.py  test_document_extract.py  test_feature_drafting.py  test_journal_schema.py  test_llm_refinement.py  test_manual_downloads.py  test_manual_sources.py  test_manuscript.py  test_metrics.py  test_scoring.py  test_streamlit_helpers.py  test_updating.py
(+28 files in other folders)
