[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "journal-recommender"
version = "0.1.0"
description = "Evidence-based journal recommendation tooling for microbiome, genomics, and bioinformatics manuscripts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
app = [
  "streamlit>=1.36",
  "python-docx>=1.1",
  "pypdf>=4.2",
]

[project.scripts]
journal-recommender = "journal_recommender.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
